fix(vnpay): cleanup code quality issues
- Add PaymentRepository.findByTransactionId() - avoid full table scan
- Replace findAll().stream().filter() with indexed query in IPN handler
- Replace findAll().stream().filter() with indexed query in callback handler
- Replace deprecated new Locale(String,String) with Locale.of() (Java 21)
- Replace System.out.println with @Slf4j structured logging
- Replace e.printStackTrace() with log.error() in cash payment handler
- Build: zero warnings, BUILD SUCCESS